[package]
name = "haybrasil"
version = "0.2.1"
edition = "2021"
description = "Brazilian macroeconomic data plugin for Hayashi with real API integration"
license = "MIT"
repository = "https://github.com/sheep-farm/haybrasil"

[lib]
crate-type = ["cdylib"]

[dependencies]
hayashi-plugin-sdk = { git = "https://github.com/sheep-farm/hayashi-plugin-sdk.git", branch = "main" }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
strip = "symbols"
panic = "abort"
